packages/scrypt-ts-transpiler-opcat/test/contracts/invalid/publicMethod1.ts
import { SmartContract } from '@opcat-labs/scrypt-ts-opcat';

export class PublicMethod1 extends SmartContract {
  // invalid, contract should have at least one public function
}
